summit/static/scss/_theme.scss
body {
  font-family: 'Lato', sans-serif;
  color: $grey-color;
  font-size: rem-calc(18);
}

h1, h2, h3 {
  font-weight: 400;
}

a {
  text-decoration: none;
  color: #2ea0c2;
}

* {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

@mixin title-font() {
  text-transform: uppercase;
  font-size: rem-calc(30);
  font-weight: 500;
}

@mixin section-title() {
  @include grid-column($columns: 12);
  @include title-font;

  color: $orange-color;
}

@mixin custom-button() {
  @include button();
  text-transform: uppercase;
  font-family: "Lato", sans-serif;
  font-weight: 600;
  font-size: rem-calc(21);
  line-height: rem-calc(10);
  white-space: nowrap;
  height: 41px;
  margin: 0;
  width: 100%;
}

.header {
  width: 100%;
  height: 60px;
  background-color: $orange-color;
  position: fixed;
  z-index: 1000;
  
  @media #{$large-up} {
    height: 35px;
  }
}

.navigation {
  float: right;
  list-style-type: none;
  padding: 0;
  margin: 0;
  line-height: rem-calc(15);
  display: none;

  @media #{$large-up}  {
    display: block;
  }
}

.navigation__item {
  float: left;
}

.navigation__link {
  text-transform: uppercase;
  color: white;
  font-size: rem-calc(18);
  font-weight: 600;
  display: block;
  padding: 10px 27px;

  &:hover {
    background: #dd860a;
  }
}

.navigation-button {
  background: url(#{$static-url}img/icons/menu.svg) no-repeat center;
  background-size: 50px 50px;
  display: block;
  width: 60px;
  height: 100%;
  margin-left: 10px;
  cursor: pointer;
  float: left;

  @media #{$large-up} {
    display: none;
  }
}

.header-media {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: block;
  float: right;
}

.header-media__item {
  display: block;
  float: right;
  padding: 7px;

  &:hover {
    background-color: #dd860a;
  }
}

.header-media__link {
  display: block;
  background-size: contain !important;
  margin-top: 5px;
  width: 38px;
  height: 39px;

  @media #{$large-up} {
    width: 25px;
    height: 21px;
    margin: 0;
  }
}

.header-media--twitter {
  background: url(#{$static-url}img/icons/twitter.svg) no-repeat center;
}

.header-media--facebook {
  background: url(#{$static-url}img/icons/facebook.svg) no-repeat center;
}

.header-media--mail {
  background: url(#{$static-url}img/icons/email.svg) no-repeat center;
}

.navigation-button2{
  height: 30px;
}


/*

  SIDEBAR Mobile

*/


.sidebar-nav {
  padding-top: 80px;
  width: 100%;
  height: 440px;
  transform: translate3d(-100%, 0px, 0px);
  -webkit-transform: translate3d(-100%, 0px, 0px);
  transition: all 0.5s ease 0s;
  background: #404041;
  position: fixed;
  z-index: 1000;
  top: 0;
  -webkit-perspective: 1000px;
}

.sidebar-nav--opened {
  transform: translate3d(0%, 0px, 0px);
  -webkit-transform: translate3d(0%, 0px, 0px);
}

.sidebar__menu {
  list-style: none;
}

.sidebar__menu__item {
  margin-bottom: 20px;
}

.sidebar__menu__link {
  color: #fff;
  font-size: 18px !important;
  display: block;
  text-align: center;

  &:hover {
    color: #e5e5e5;
  }
}

.sidebar__menu__item--active {

  .sidebar__menu__link {
    color: #e5e5e5;
    font-size: 18px !important;
  }
}



.intro-container {
  @include grid-row;
}

.intro {
  @include grid-column($columns: 12);
  padding-top: 110px;
  padding-bottom: 20px;
  text-align: center;

  @media #{$small-only} {
    float: none;
    margin: 0 auto;
    padding-top: 140px;
  }

}

.intro-buttons {
  width: 100%;
  max-width: 650px;
  margin: 0 auto;
  margin-top: 40px;

  h3 {
    font-size: rem-calc(21);
  }
}

.newsletter {
  width: 256px;
  float: right;

  @media #{$small-only} {
    float: none;
    @include grid-column($columns: 10, $offset: 1);
  }
}

.newsletter__button {
  @include button($disabled: true);

  text-transform: uppercase;
  font-family: "Lato", sans-serif;
  font-weight: 600;
  font-size: rem-calc(21);
  line-height: rem-calc(10);
  white-space: nowrap;
  height: 41px;
  margin: 0;
  width: 100%;

  &.not-active {
    background: #7f807d;
    pointer-events: none;
    cursor: default;
  }
}

.registration-button {
  width: 256px;
  float: left;

  @media #{$small-only} {
    float: none;
    @include grid-column($columns: 10, $offset: 1);
    padding-top: 20px;
  }
}

.registration-button__link {
  @include button();
  text-transform: uppercase;
  font-family: "Lato", sans-serif;
  font-weight: 600;
  font-size: rem-calc(21);
  line-height: rem-calc(10);
  height: 41px;
  margin: 0;
  background-color: #e89715;
  width: 100%;

  &.not-active {
    background: #7f807d;
    pointer-events: none;
    cursor: default;
  }
}

.registration-button--warning {
  color: red;
}

.event-name {
  font-family: Questrial, sans-serif;
  font-size: rem-calc(68);
  margin-top: 0;
  margin-bottom: 0;
  letter-spacing: 1px;

  @media #{$small-only} {
    font-size: rem-calc(42);
  }
}

.intro__subtitle {
  margin-top: 10px;
  margin-bottom: 0;
  font-size: rem-calc(34);

  @media #{$small-only} {
    font-size: rem-calc(24);
    margin-top: 15px;
  }
}

.intro__date {
  margin-top: 5px;
  margin-bottom: 0;
  font-weight: 500;
  font-size: rem-calc(36);

  @media #{$small-only} {
    font-size: rem-calc(25);
  }
}

.event-name__summit {
  color: $orange-color;
}

.about-container {
  background: url('#{$static-url}img/backgrounds/about.png') no-repeat;
  background-size: cover;

  @media #{$small-only} {
    background-image: url('#{$static-url}img/backgrounds/about-mobile.jpg');
  }
}

.about {
  @include grid-row();
  padding-bottom: 50px;
  color: white;
  font-family: 'Lato', sans-serif;
  font-weight: 300;

  p {
    margin-top: 0;
    line-height: rem-calc(22);
  }

  a {
    color: $orange-color;
  }
}

.about__title {
  @include section-title;

  margin-bottom: 20px;
}

.about__first-part {
  @include grid-column($columns: 6);
  @media #{$small-only} {
    @include grid-column($columns: 12);
  }
}

.about__second-part {
  @include grid-column($columns: 6);
  @media #{$small-only} {
    @include grid-column($columns: 12);
  }
}
/* ... */

